--- a/config
+++ b/config
@@ -1,9 +1,20 @@
+# Resize
 keybind = super+ctrl+h=resize_split:left,10
 keybind = super+ctrl+j=resize_split:down,10
 keybind = super+ctrl+k=resize_split:up,10
 keybind = super+ctrl+l=resize_split:right,10
+
+# Move between splits
 keybind = alt+h=goto_split:left
 keybind = alt+j=goto_split:bottom
 keybind = alt+k=goto_split:top
 keybind = alt+l=goto_split:right
+
+# Look
 theme = NvimDark
+background-opacity = 0.5
+background-blur-radius = 36 
+font-family = RobotoMono Nerd Font Mono
+resize-overlay = never
+macos-titlebar-style = tabs
+title = " "
