--- a/config
+++ b/config
@@ -1,13 +1,13 @@
 # Resize
-keybind = ctrl+alt+h=resize_split:left,10
-keybind = ctrl+alt+j=resize_split:down,10
-keybind = ctrl+alt+k=resize_split:up,10
-keybind = ctrl+alt+l=resize_split:right,10
+keybind = shift+alt+h=resize_split:left,10
+keybind = shift+alt+j=resize_split:down,10
+keybind = shift+alt+k=resize_split:up,10
+keybind = shift+alt+l=resize_split:right,10
 
 # Move between splits
 keybind = alt+h=goto_split:left
-keybind = alt+j=goto_split:bottom
-keybind = alt+k=goto_split:top
+keybind = alt+j=goto_split:down
+keybind = alt+k=goto_split:up
 keybind = alt+l=goto_split:right
 
 # Look
@@ -17,5 +17,4 @@ background-blur-radius = 48
 font-family = RobotoMono Nerd Font Mono
 resize-overlay = never
 macos-titlebar-style = tabs
-title = " "
 font-size = 15 
